--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,15 @@
 
-file(GLOB HEADER_FILES "include/mat/*.hpp")
+file(GLOB HEADER_FILES "include/kma/*.hpp")
 file(GLOB SOURCE_FILES "*.cpp")
 
 # Create a library from the source files
-add_library(math_library ${HEADER_FILES} ${SOURCE_FILES})
+add_library(kmath_library ${HEADER_FILES} ${SOURCE_FILES})
 
-target_include_directories(math_library PUBLIC ../include)
+target_include_directories(kmath_library PUBLIC ../include)
 
-target_include_directories(math_library PUBLIC ../include)
+target_include_directories(kmath_library PUBLIC ../include)
 
-target_compile_features(math_library PUBLIC cxx_std_20)
+target_compile_features(kmath_library PUBLIC cxx_std_20)
 
 source_group(
   TREE "${PROJECT_SOURCE_DIR}/include"
