--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
 
 project(
-  mat
+  kmath
   LANGUAGES CXX)
 
 
@@ -15,7 +15,7 @@ set(CMAKE_CXX_STANDARD 20)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -std=c++20")
 message (STATUS "COMPILER FLAGS: " ${CMAKE_CXX_FLAGS})
 
-project ("mat")
+project ("kmath")
 
 
 add_subdirectory(src)
