--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,32 @@
-cmake_minimum_required(VERSION 3.24)
+# Cmake version
+cmake_minimum_required(VERSION 3.8)
 
+# Project name and languages
 project(
   kmath
-  LANGUAGES CXX)
+  LANGUAGES C CXX)
 
-
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
-endif()
-
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
 
+# Compiler flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -std=c++20")
 message (STATUS "COMPILER FLAGS: " ${CMAKE_CXX_FLAGS})
 
-project ("kmath")
+# Locate header files
+file(GLOB LIBRARY_FILES "include/kma/*.hpp")
 
-add_subdirectory(src)
+# Create an INTERFACE library (header-only library)
+add_library(kmath_library INTERFACE)
 
+# Set C++ features for the library
+target_compile_features(kmath_library INTERFACE cxx_std_20)
+
+# Set include directories for the library
+target_include_directories(kmath_library INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+
+# Add demos subdirectory
 add_subdirectory(demos)
