--- a/tests/CmakeLists.txt
+++ b/tests/CmakeLists.txt
@@ -1,4 +1,9 @@
+find_package(Catch2 3 REQUIRED)
+
 add_executable(vector_tests "vector_tests.cpp")
+
 target_compile_features(vector_tests PRIVATE cxx_std_20)
+
 target_link_libraries(vector_tests PRIVATE kmath_library)
 
+target_link_libraries(vector_tests PRIVATE Catch2::Catch2WithMain)
