--- a/tests/CmakeLists.txt
+++ b/tests/CmakeLists.txt
@@ -3,9 +3,10 @@ find_package(Catch2 3 REQUIRED)
 file(GLOB TEST_FILES "vector_tests.cpp" 
 					 "quat_tests.cpp"
 					 "matrix_tests.cpp"
+					 "transform_tests.cpp"
 )
 
-add_executable(kmath_tests ${TEST_FILES})
+add_executable(kmath_tests ${TEST_FILES} )
 
 target_compile_features(kmath_tests PRIVATE cxx_std_20)
 
